--- a/.env_sample
+++ b/.env_sample
@@ -3,4 +3,6 @@ SERVER_PORT = 0
 DB_HOST = 'localhost'
 DB_USER = 'root'
 DB_PASSWORD = ''
-DB_NAME = 'dbName'
+DB_NAME = 'rent-book-app'
+
+JWT_SECRET = 'yourSecret'
