updating .env sample

--- a/.env_sample
+++ b/.env_sample
@@ -1,8 +1,18 @@
-SERVER_PORT = 0
+PORT = 3030
 
-DB_HOST = 'localhost'
-DB_USER = 'root'
-DB_PASSWORD = ''
-DB_NAME = 'rent-book-app'
+DB_REMOTE_HOST = ''
+DB_REMOTE_USER = ''
+DB_REMOTE_PASSWORD = ''
+DB_REMOTE_NAME = ''
 
-JWT_SECRET = 'yourSecret'
+DB_LOCAL_HOST = ''
+DB_LOCAL_USER = ''
+DB_LOCAL_PASSWORD = ''
+DB_LOCAL_NAME = ''
+
+CLOUDINARY_CLOUD_NAME = ''
+CLOUDINARY_API_KEY = ''
+CLOUDINARY_API_SECRET = ''
+
+JWT_SECRET = ''
+REDISCLOUD_URL = ''
